cbits/Bullet.h

void btCompoundShape_getChildTransform0(void *c,int p0,float* ret); //method: getChildTransform ::btTransform & ( ::btCompoundShape::* )( int ) 
void btCompoundShape_getChildTransform1(void *c,int p0,float* ret); //method: getChildTransform ::btTransform const & ( ::btCompoundShape::* )( int ) const
void* btCompoundShape_getChildList(void *c); //method: getChildList ::btCompoundShapeChild * ( ::btCompoundShape::* )(  ) 
float btCompoundShape_getMargin(void *c); //method: getMargin ::btScalar ( ::btCompoundShape::* )(  ) const
void btCompoundShape_setMargin(void *c,float p0); //method: setMargin void ( ::btCompoundShape::* )( ::btScalar ) 
int btCompoundShape_getNumChildShapes(void *c); //method: getNumChildShapes int ( ::btCompoundShape::* )(  ) const
void btCompoundShape_removeChildShapeByIndex(void *c,int p0); //method: removeChildShapeByIndex void ( ::btCompoundShape::* )( int ) 
void btCompoundShape_recalculateLocalAabb(void *c); //method: recalculateLocalAabb void ( ::btCompoundShape::* )(  ) 
void btCompoundShape_updateChildTransform(void *c,int p0,float* p1,int p2); //method: updateChildTransform void ( ::btCompoundShape::* )( int,::btTransform const &,bool ) 
//not supported method: calculatePrincipalAxisTransform void ( ::btCompoundShape::* )( ::btScalar *,::btTransform &,::btVector3 & ) const
// error:  - unsupported, ::btTransform & - ok, ::btVector3 & - ok, void - ok

void btCompoundShape_removeChildShape(void *c,void* p0); //method: removeChildShape void ( ::btCompoundShape::* )( ::btCollisionShape * ) 
void btCompoundShape_m_children_set(void *c,void* a); //attribute: ::btAlignedObjectArray<btCompoundShapeChild> btCompoundShape->m_children
void* btCompoundShape_m_children_get(void *c); //attribute: ::btAlignedObjectArray<btCompoundShapeChild> btCompoundShape->m_children
void btCompoundShape_m_localAabbMin_set(void *c,float* a); //attribute: ::btVector3 btCompoundShape->m_localAabbMin
void btCompoundShape_m_localAabbMin_get(void *c,float* a);
void btCompoundShape_m_localAabbMax_set(void *c,float* a); //attribute: ::btVector3 btCompoundShape->m_localAabbMax
void btCompoundShape_m_localAabbMax_get(void *c,float* a);
void btCompoundShape_m_dynamicAabbTree_set(void *c,void* a); //attribute: ::btDbvt * btCompoundShape->m_dynamicAabbTree
void* btCompoundShape_m_dynamicAabbTree_get(void *c); //attribute: ::btDbvt * btCompoundShape->m_dynamicAabbTree
void btCompoundShape_m_updateRevision_set(void *c,int a); //attribute: int btCompoundShape->m_updateRevision
int btCompoundShape_m_updateRevision_get(void *c); //attribute: int btCompoundShape->m_updateRevision
void btCompoundShape_m_collisionMargin_set(void *c,float a); //attribute: ::btScalar btCompoundShape->m_collisionMargin
float btCompoundShape_m_collisionMargin_get(void *c); //attribute: ::btScalar btCompoundShape->m_collisionMargin
void btCompoundShape_m_localScaling_set(void *c,float* a); //attribute: ::btVector3 btCompoundShape->m_localScaling
void btCompoundShape_m_localScaling_get(void *c,float* a);
void* btCompoundShapeChild_new(); //constructor: btCompoundShapeChild  ( ::btCompoundShapeChild::* )(  ) 
void btCompoundShapeChild_free(void *c);
 
void btCompoundShapeChild_m_childMargin_set(void *c,float a); //attribute: ::btScalar btCompoundShapeChild->m_childMargin
float btCompoundShapeChild_m_childMargin_get(void *c); //attribute: ::btScalar btCompoundShapeChild->m_childMargin
void btCompoundShapeChild_m_childShape_set(void *c,void* a); //attribute: ::btCollisionShape * btCompoundShapeChild->m_childShape