Physics/Bullet/Raw/BulletCollision/CollisionShapes.chs

{#fun btCompoundShape_getChildTransform0 as btCompoundShape_getChildTransform0    `( BtCompoundShapeClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
, allocaTransform-  `Transform'  peekTransform* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#103>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_getChildTransform1 as btCompoundShape_getChildTransform1    `( BtCompoundShapeClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
, allocaTransform-  `Transform'  peekTransform* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#112>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_getChildList as btCompoundShape_getChildList    `( BtCompoundShapeClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtCompoundShapeChild'  mkBtCompoundShapeChild* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#137>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_getMargin as btCompoundShape_getMargin    `( BtCompoundShapeClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#133>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_setMargin as btCompoundShape_setMargin    `( BtCompoundShapeClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ margin
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#85>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_getNumChildShapes as btCompoundShape_getNumChildShapes    `( BtCompoundShapeClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#82>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_removeChildShapeByIndex as btCompoundShape_removeChildShapeByIndex    `( BtCompoundShapeClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ childShapeindex
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#122>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_recalculateLocalAabb as btCompoundShape_recalculateLocalAabb    `( BtCompoundShapeClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#109>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_updateChildTransform as btCompoundShape_updateChildTransform    `( BtCompoundShapeClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ childIndex
, withTransform* `Transform'  peekTransform* -- ^ newChildTransform
,  `Bool'  -- ^ shouldRecalculateLocalAabb
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#109>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_updateChildTransform as btCompoundShape_updateChildTransform'    `( BtCompoundShapeClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ childIndex
, allocaTransform-  `Transform'  peekTransform* -- ^ newChildTransform
,  `Bool'  -- ^ shouldRecalculateLocalAabb
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#80>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_removeChildShape as btCompoundShape_removeChildShape    `( BtCompoundShapeClass bc , BtCollisionShapeClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ shape
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#56>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_m_children_set    `( BtCompoundShapeClass bc , BtAlignedObjectArray_btCompoundShapeChild_Class a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#56>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_m_children_get    `( BtCompoundShapeClass bc )' =>     { withBt* `bc'  } ->  `BtAlignedObjectArray_btCompoundShapeChild_'  mkBtAlignedObjectArray_btCompoundShapeChild_* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#57>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_m_localAabbMin_set    `( BtCompoundShapeClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#57>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_m_localAabbMin_get    `( BtCompoundShapeClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#58>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_m_localAabbMax_set    `( BtCompoundShapeClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#58>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_m_localAabbMax_get    `( BtCompoundShapeClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#60>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_m_dynamicAabbTree_set    `( BtCompoundShapeClass bc , BtDbvtClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#60>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_m_dynamicAabbTree_get    `( BtCompoundShapeClass bc )' =>     { withBt* `bc'  } ->  `BtDbvt'  mkBtDbvt* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#63>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_m_updateRevision_set    `( BtCompoundShapeClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#63>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_m_updateRevision_get    `( BtCompoundShapeClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#65>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_m_collisionMargin_set    `( BtCompoundShapeClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#65>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_m_collisionMargin_get    `( BtCompoundShapeClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#68>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_m_localScaling_set    `( BtCompoundShapeClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#68>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShape_m_localScaling_get    `( BtCompoundShapeClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
-- * btCompoundShapeChild
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#31>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShapeChild_new as btCompoundShapeChild    {  } -> `BtCompoundShapeChild' mkBtCompoundShapeChild* #}
{#fun btCompoundShapeChild_free    `( BtCompoundShapeChildClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#37>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShapeChild_m_childMargin_set    `( BtCompoundShapeChildClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#37>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShapeChild_m_childMargin_get    `( BtCompoundShapeChildClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.h?r=2223#35>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCompoundShape.cpp?r=2223>
-}
{#fun btCompoundShapeChild_m_childShape_set    `( BtCompoundShapeChildClass bc , BtCollisionShapeClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
